Fix ingredient alignment

--- a/src/wpzoom-blocks/recipe-block-from-posts/editor.scss
+++ b/src/wpzoom-blocks/recipe-block-from-posts/editor.scss
@@ -3,10 +3,6 @@
  *
  * Replace them with your own styles or remove the file completely.
  */
-
-.wpzoom-custom-recipe-card-post .wp-block-wpzoom-recipe-card-block-recipe-card .ingredient-item:not(.ingredient-item-group) .ingredient-item-name {
-	display: inline-block;
-}
 .wpzoom-select-cpt-recipe-cards {
 	min-width: 250px;
 }
